force-app/main/default/objects/Bird_Returns_Stake__c.object
<CustomObject>
    <description>Represents a specific stake on a site involved in the Bird Returns program.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>XDeprecated: Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bid_ID__c</fullName>
        <formula>Contract_ID__r.BirdReturns_Bid_Name__r.Name</formula>
        <inlineHelpText>Pulls in the Bid ID for this stake.</inlineHelpText>
        <label>Bid ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <description>The contract that this stake is associated with.</description>
        <inlineHelpText>The contract that this stake is associated with. (Lookup field).</inlineHelpText>
        <label>Contract ID</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Stakes</relationshipLabel>
        <relationshipName>Stakes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <inlineHelpText>The date the iForm entry was created.</inlineHelpText>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>XDeprecated: Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stake_Location__c</fullName>
        <inlineHelpText>Geo-coordinates for the stake.</inlineHelpText>
        <label>Stake Location</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Unique_Stake_Name__c</fullName>
        <inlineHelpText>Bid ID/Name and Stake Number. Used to make sure that duplicate stakes aren&apos;t created in iForm.</inlineHelpText>
        <label>Unique Stake Name</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>iForm_User__c</fullName>
        <inlineHelpText>Unique identifier for the individual who submitted this stake via iForm.</inlineHelpText>
        <label>iForm User</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Stake</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Stake Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stakes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Stake_Numbers_must_be_Numbers</fullName>
        <active>true</active>
        <description>Enforces the text field Stake Number as a number</description>
        <errorConditionFormula>NOT(ISNUMBER( Name ))</errorConditionFormula>
        <errorMessage>Stake Number must be a number.</errorMessage>
    </validationRules>
</CustomObject>